backport playtika session changes